objects/T0500__c.object
<CustomObject>
    <fields>
        <fullName>Primary_Bank_Name__c</fullName>
        <description>Primary Banking Services Provider</description>
        <label>Primary Bank List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Essex</fullName>
                </value>
                <value>
                    <fullName>5th 3rd Bank</fullName>
                </value>
                <value>
                    <fullName>Adams Co-Operative Bank</fullName>
                </value>
                <value>
                    <fullName>Adirondack Bank</fullName>
                </value>
                <value>
                    <fullName>Adirondack Trust</fullName>
                </value>
                <value>
                    <fullName>Allegiance Bank</fullName>
                </value>
                <value>
                    <fullName>Allied Trust</fullName>
                </value>
                <value>
                    <fullName>Androscoggin Savings Bank</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T Capital</fullName>
                </value>
                <value>
                    <fullName>Ballston Spa</fullName>
                </value>
                <value>
                    <fullName>Ballston Spa National Bank</fullName>
                </value>
                <value>
                    <fullName>Bangor Savings Bank</fullName>
                </value>
                <value>
                    <fullName>BankAtlantic</fullName>
                </value>
                <value>
                    <fullName>Bank Five</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>Bank of Bennington</fullName>
                </value>
                <value>
                    <fullName>Bank of Cape Cod</fullName>
                </value>
                <value>
                    <fullName>Bank of Fall River</fullName>
                </value>
                <value>
                    <fullName>Bank of Greene County</fullName>
                </value>
                <value>
                    <fullName>Bank of New England</fullName>
                </value>
                <value>
                    <fullName>Bank of New Hampshire</fullName>
                </value>
                <value>
                    <fullName>Bank of New Jersey</fullName>
                </value>
                <value>
                    <fullName>Bar Harbor Bank and Trust</fullName>
                </value>
                <value>
                    <fullName>Beneficial</fullName>
                </value>
                <value>
                    <fullName>Beneficial Savings Bank</fullName>
                </value>
                <value>
                    <fullName>Berkshire Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <label>Test1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>field005__c</fullName>
        <description>update description</description>
        <label>field005</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field006__c</fullName>
        <description>change the length</description>
        <label>field006</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field007__c</fullName>
        <label>field007</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>picklist1__c</fullName>
        <label>picklist1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>picklist2__c</fullName>
        <label>picklist2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>T0500_1</label>
    <nameField>
        <label>T0500 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T0500_1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>